--- a/templates/person.html
+++ b/templates/person.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>{{ person.name }} {% if person.in_scholar_names %}<a href="kairos.technorhetoric.net/praxis/tiki-index.php?page=ScholarNames"><span class="glyphicon glyphicon-volume-up" alt="Click for Pronunciation on Kairos ScholarNames"></span>{% endif %}</h1>
+<h1>{{ person.name }} {% if person.in_scholar_names %}<a href="http://kairos.technorhetoric.net/praxis/tiki-index.php?page=ScholarNames" target="_blank"><span class="glyphicon glyphicon-volume-up" alt="Pronunciation on Kairos ScholarNames" title="Click for pronunciation on Kairos ScholarNames"></span>{% endif %}</h1>
 
 
 <h2>Has studied at...</h2>
