--- a/templates/home.html
+++ b/templates/home.html
@@ -11,13 +11,14 @@ WST Home
 {% endblock %}
 
 {% block content %}
+{{ super() }}
 <h1>Welcome to the Writing Studies Tree!</h1>
 <div class="container">
 <div class="row">
-<div class="col-sm-3">
+<div class="col-sm-3"> <!-- left column -->
 <img src="static/img/WST_Logo_Green_200x200_72dpi.jpg" alt="WST network logo" class="img-responsive center-block">
-</div>
-<div class="col-sm-9">
+</div> <!-- end left column -->
+<div class="col-sm-8"> <!-- right column -->
 The WST is an online, crowdsourced database of academic genealogies within writing studies; in other words, it is an interactive archive for recording and mapping scholarly relationships in Composition and Rhetoric and adjacent disciplines. 
 
 Get searching!
