fix duplicated / missing section title

--- a/templates/person.html
+++ b/templates/person.html
@@ -17,7 +17,7 @@
 {% endfor %}	
 </ul>
 
-<h2>Has studied at...</h2>
+<h2>Has worked at...</h2>
 <ul>
 {% for item in person.worked_at %}
 	<li><a href="/institution/{{ item.name }}">{{ item.name }}</a></li>
