--- a/templates/institutions.html
+++ b/templates/institutions.html
@@ -1,10 +1,10 @@
-{% extends "bootstrap/base.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
 Institutions in the WST
 {% endblock %}
 
-{% block content %}
+{% block main %}
 <h1>Institutions in the WST</h1>
 	<ul>
 	{% for institution in institutions %}
