--- a/templates/people.html
+++ b/templates/people.html
@@ -1,10 +1,10 @@
-{% extends "bootstrap/base.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
 People in the WST
 {% endblock %}
 
-{% block content %}
+{% block main %}
 <h1>People</h1>
 	<ul>
 	{% for person in people %}
