added new school form, corrected datatype error, corrected tag error

--- a/src/app.scss
+++ b/src/app.scss
@@ -51,3 +51,7 @@ $font-family-base: 'Source Sans Pro', sans-serif;;
 	background-color: white;
 	opacity: 0.92;
 }
+
+.textCenter {
+	text-align: center;
+}
