--- a/src/app.scss
+++ b/src/app.scss
@@ -38,18 +38,22 @@ $font-family-base: 'Source Sans Pro', sans-serif;;
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
 
-
+body
+{
+	background-color: HoneyDew;
+}
 
 .inside {
+	border-radius: 10px;
 	width: 80%;
-	border: 2px solid black;
+	border: 1px solid grey;
 	height: auto;
 	padding: 2%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
 	background-color: white;
-	opacity: 0.92;
+	opacity: 0.95;
 }
 
 .textCenter {
