--- a/src/app.scss
+++ b/src/app.scss
@@ -64,3 +64,17 @@ body
 {
 	font-size: small;
 }
+
+.inception 
+    {
+	border-radius: 10px;
+	width: 100%;
+	border: 1px solid grey;
+	height: auto;
+	padding: 2%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	background-color: white;
+	opacity: 0.95;
+    }
