Revert "Search & explore page"
This reverts commit 4194633af29a97de06361bdb8990cdf1a822ec9d, reversing
changes made to f328562d8f4ed391b3a4466ca2f07e45e7f92021.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-$font-family-base: 'Source Sans Pro', sans-serif;
-$enable-shadows: true;
+$font-family-base: 'Source Sans Pro', sans-serif;;
 
 /* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */ /* Import only what you need from Bootstrap */
 @import "bootstrap/scss/root";
